--- a/sass/homepage/main.scss
+++ b/sass/homepage/main.scss
@@ -31,26 +31,6 @@ html {
   position: relative;
   overflow: hidden;
 
-  .time-bar {
-    position: absolute;
-    top: 70px;
-    left: 0;
-    right: 0;
-    height: 5px;
-    background-color: rgb(255, 255, 255);
-    animation: fill-bar 6000ms infinite;
-    z-index: 100;
-
-    @keyframes fill-bar {
-      0% {
-        width: 0%;
-      }
-      100% {
-        width: 100%;
-      }
-    }
-  }
-
   @include respond(phone) {
     background-size: 450px;
     background-repeat: no-repeat;
@@ -250,10 +230,27 @@ html {
 
     .heading--primary {
       display: inline-block;
-      font-size: 1.5em;
+      font-size: 1.4em;
+      height: max-content;
       width: max-content;
       font-family: "Orbitron", sans-serif;
       transition: all 100ms ease;
+
+      .time-bar {
+        margin: 0 auto;
+        height: 2px;
+        background-color: red;
+        animation: fill-bar 4500ms infinite;
+
+        @keyframes fill-bar {
+          0% {
+            width: 0%;
+          }
+          100% {
+            width: 100%;
+          }
+        }
+      }
 
       @include respond(phone) {
         font-size: 2.5rem;
